--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@ background: linear-gradient(135deg, var(--valentine-strong-pink), var(--valentin
 max-width: 500px; width: 90%; transform: scale(0.5); transition: all 0.4s cubic-bezier(0.68, -0.55, 0.27, 1.55);
 }
 .popup-overlay.show .popup-content { transform: scale(1); }
-.popup-title { font-family: 'Great Vibes', cursive; font-size: 3rem; color: white; margin-bottom: 20px; }
+.popup-title { font-family: 'Poppins', sans-serif; font-size: 2.2rem; font-weight: 700; color: white; margin-bottom: 20px; text-transform: uppercase; letter-spacing: 2px; }
 .popup-prize { font-size: 1.5rem; color: white; font-weight: 700; margin: 20px 0; padding: 15px; background: rgba(255,255,255,0.2); border-radius: 15px; }
 .popup-instructions { font-size: 0.9rem; color: white; opacity: 0.9; margin-top: 25px; font-weight: 500; }
 .popup-close { background: white; color: var(--valentine-deep-red); border: none; padding: 15px 30px; border-radius: 25px; font-weight: 700; font-size: 1.1rem; cursor: pointer; margin-top: 20px; }
@@ -615,7 +615,7 @@ max-width: 400px;
 }
 
 .popup-title {
-font-size: 2.5rem;
+font-size: 1.8rem;
 }
 
 .popup-prize {
