--- a/admin.html
+++ b/admin.html
@@ -352,16 +352,15 @@
             gap: 5px;
         }
 
-        /* Sistema de Notificaciones Toast Mejorado */
+        /* Sistema de Notificaciones Toast Corregido */
         #toast-container {
             position: fixed;
             bottom: 20px;
             right: 20px;
             z-index: 9999;
             display: flex;
-            flex-direction: column-reverse; /* Apila los toasts hacia arriba */
+            flex-direction: column-reverse; /* Apila toasts nuevos arriba de los viejos */
             gap: 15px;
-            width: auto;
         }
 
         .toast {
@@ -371,13 +370,14 @@
             padding: 15px 20px;
             border-radius: 12px;
             font-weight: 600;
+            color: white;
             box-shadow: 0 5px 20px rgba(0,0,0,0.2);
             min-width: 320px;
             max-width: 400px;
             opacity: 0;
             transform: translateX(120%);
             transition: all 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-            pointer-events: auto;
+            pointer-events: auto; /* Importante para que se puedan clickear */
         }
 
         .toast.show {
@@ -385,9 +385,9 @@
             transform: translateX(0);
         }
 
-        .toast.success { background: linear-gradient(135deg, #2ecc71, #28a745); color: white; }
-        .toast.error { background: linear-gradient(135deg, #e74c3c, #c0392b); color: white; }
-        .toast.info { background: linear-gradient(135deg, #3498db, #2980b9); color: white; }
+        .toast.success { background: linear-gradient(135deg, #2ecc71, #28a745); }
+        .toast.error { background: linear-gradient(135deg, #e74c3c, #c0392b); }
+        .toast.info { background: linear-gradient(135deg, #3498db, #2980b9); }
 
         .toast-icon { font-size: 1.5rem; }
         .toast-message { flex-grow: 1; text-align: left; }
@@ -1391,6 +1391,8 @@
         // NUEVO SISTEMA DE NOTIFICACIONES TOAST (VERSIÓN CORREGIDA)
         function mostrarNotificacion(mensaje, tipo = 'info') {
             const container = document.getElementById('toast-container');
+            if (!container) return; // Parar si el contenedor no existe
+
             const toast = document.createElement('div');
             toast.className = `toast ${tipo}`;
 
@@ -1404,26 +1406,20 @@
 
             container.appendChild(toast);
 
-            // Animar entrada
+            // Animar entrada del toast
             setTimeout(() => {
                 toast.classList.add('show');
-            }, 100);
+            }, 10);
 
-            // Función para cerrar el toast
+            // Función para cerrar y eliminar el toast
             const closeToast = () => {
                 toast.classList.remove('show');
-                // Eliminar el toast del DOM después de que la animación de salida termine
-                toast.addEventListener('transitionend', () => {
-                    if (toast.parentNode) {
-                        toast.remove();
-                    }
-                });
+                // Escuchar el final de la animación de salida para eliminar el elemento del DOM
+                toast.addEventListener('transitionend', () => toast.remove(), { once: true });
             };
 
-            // Evento clic en el botón de cerrar
             toast.querySelector('.toast-close').addEventListener('click', closeToast);
 
-            // Auto-cerrar después de 4 segundos
             setTimeout(closeToast, 4000);
         }
 
